[tool.poetry]
name = "influxdb-python-demo"
version = "0.1.0"
description = ""
authors = ["Ting Zhou <ztlevi.work@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "^1.4.1"
fastparquet = "^0.8.0"
python-snappy = "^0.6.1"
pdbpp = "^0.10.3"
influxdb-client = "^1.27.0"
pyarrow = "^7.0.0"
rich = "^12.0.1"
s3fs = "^2022.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
